--- a/index.html
+++ b/index.html
@@ -1032,7 +1032,7 @@
   <header class="header">
     <div class="brand">
       <a href="index.html" class="logo">
-        <img src="img/Logo-KKP.png" alt="Logo SIMANGRO"/>
+        <img src="img/logo-KKP.png" alt="Logo SIMANGRO"/>
       </a>
       <div class="sitename">SIMANGRO</div>
     </div>
@@ -1372,3 +1372,4 @@
 </body>
 
 </html>
+
