--- a/jenis/index.html
+++ b/jenis/index.html
@@ -699,7 +699,7 @@
       { name: 'Acanthus ilicifolius', file: 'acanthus-ilicifolius.html', image: '../img/acanthus-ilicifolius.jpg' },
       { name: 'Acrostichum aureum', file: 'acrostichum-aureum.html', image: '../img/acrostichum-aureum.jpg' },
       { name: 'Acrosticum speciosum', file: 'acrosticum-speciosum.html', image: '../img/acrosticum-speciosum.jpg' },
-      { name: 'Aegialitis annulata', file: 'aegialitis-annulata.html', image: '../img/aegialitis-annulata.jpeg' },
+      { name: 'Aegialitis annulata', file: 'aegialitis-annulata.html', image: '../img/aegialitis-annulata.jpg' },
       { name: 'Aegiceras corniculatum', file: 'aegiceras-corniculatum.html', image: '../img/aegiceras-corniculatum.jpg' },
       { name: 'Aegiceras floridum', file: 'aegiceras-floridum.html', image: '../img/aegiceras-floridum.jpg' },
       { name: 'Amyema anisomeres', file: 'amyema-anisomeres.html', image: '../img/amyema-anisomeres.jpg' },
@@ -815,3 +815,4 @@
 </body>
 
 </html>
+
