--- a/jenis/index.html
+++ b/jenis/index.html
@@ -705,7 +705,7 @@
       { name: 'Amyema anisomeres', file: 'amyema-anisomeres.html', image: '../img/amyema-anisomeres.jpg' },
       { name: 'Amyema gravis', file: 'amyema-gravis.html', image: '../img/amyema-gravis.jpg' },
       { name: 'Amyema mackayense', file: 'amyema-mackayense.html', image: '../img/amyema-mackayense.jpg' },
-      { name: 'Avicennia alba', file: 'avicennia-alba.html', image: '../img/avicennia-alba.jpg' },
+      { name: 'Avicennia alba', file: 'avicennia-alba.html', image: '../img/avicennia-alba.JPG' },
       { name: 'Avicennia eucalyptifolia', file: 'avicennia-eucalyptifolia.html', image: '../img/avicennia-eucalyptifolia.jpg' },
       { name: 'Avicennia lanata', file: 'avicennia-lanata.html', image: '../img/avicennia-lanata.jpg' },
       { name: 'Avicennia marina', file: 'avicennia-marina.html', image: '../img/avicennia-marina.jpg' },
@@ -815,4 +815,5 @@
 </body>
 
 </html>
+
 
