--- a/index.html
+++ b/index.html
@@ -1040,6 +1040,7 @@
     <nav class="nav" aria-label="Menu utama">
       <a href="#about">Beranda</a>
       <a href="jenis/index.html">Jenis Mangrove</a>
+      <a href="peta sebaran.html">Peta Sebaran</a>
       <a href="quiz.html">Quiz</a>
     </nav>
   </header>
@@ -1371,3 +1372,4 @@
   </script>
 </body>
 </html>
+
