--- a/peta sebaran.html
+++ b/peta sebaran.html
@@ -185,16 +185,16 @@
     }
 
     .container {
-      max-width: 1400px;
+      max-width: 1200px;
       margin: 0 auto;
-      padding: 40px 20px;
+      padding: 40px 24px;
       min-height: calc(100vh - 200px);
     }
 
     .page-header {
       text-align: center;
       margin-bottom: 48px;
-      padding: 40px 20px;
+      padding: 40px;
       background: var(--gradient-card);
       backdrop-filter: blur(20px);
       border-radius: 24px;
@@ -222,21 +222,24 @@
     }
 
     .page-header h1 {
-      font-size: 2.8rem;
-      font-weight: 800;
-      background: linear-gradient(135deg, var(--primary), var(--primary-light), var(--secondary));
+      font-size: 3rem;
+      margin: 0 0 16px;
+      background: var(--gradient-primary);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       background-clip: text;
-      margin-bottom: 16px;
-      line-height: 1.2;
+      font-weight: 800;
+      letter-spacing: -0.02em;
     }
 
     .page-header p {
       color: var(--muted);
       font-size: 1.2rem;
-      margin: 0;
-      line-height: 1.6;
+      line-height: 1.7;
+      margin: 0 0 24px;
+      max-width: 600px;
+      margin-left: auto;
+      margin-right: auto;
     }
 
     .map-wrapper {
@@ -581,8 +584,7 @@
       }
 
       .page-header {
-        padding: 32px 20px;
-        margin-bottom: 32px;
+        padding: 32px 24px;
       }
 
       .page-header h1 {
@@ -591,6 +593,7 @@
 
       .page-header p {
         font-size: 1.05rem;
+        margin-bottom: 20px;
       }
 
       .map-wrapper {
@@ -650,12 +653,20 @@
     }
 
     @media (max-width: 520px) {
-      .sitename {
+      .header {
+        padding: 12px 16px;
+      }
+
+     .sitename {
         display: none;
       }
 
       html, body {
         font-size: 16px;
+      }
+
+    .page-header {
+        padding: 24px 20px;
       }
 
       .page-header h1 {
@@ -710,7 +721,7 @@
     <nav class="nav" aria-label="Menu utama">
       <a href="index.html">Beranda</a>
       <a href="jenis/index.html">Jenis Mangrove</a>
-      <a href="peta-sebaran.html">Peta Sebaran</a>
+      <a href="peta sebaran.html">Peta Sebaran</a>
       <a href="quiz.html">Quiz</a>
     </nav>
   </header>
@@ -726,22 +737,6 @@
       <div class="legend">
         <h4>Legenda</h4>
         <p>📍 Lokasi Penanaman</p>
-        <p>🟢 Area Rehabilitasi</p>
-      </div>
-    </div>
-
-    <div class="info-cards">
-      <div class="info-card">
-        <h3><span class="card-icon">🌱</span> Gampong Pasi</h3>
-        <p>Kab. Aceh Besar - KUB Tunas Usaha Sejahtera (2023) seluas 10.46 hektar.</p>
-      </div>
-      <div class="info-card">
-        <h3><span class="card-icon">🏝️</span> Gampong Baru</h3>
-        <p>Aceh Jaya - Lembaga Wisata Mangrove Sayeung & Kelompok Lembaga Eko Wisata Mangrove (2020) seluas 35 hektar.</p>
-      </div>
-      <div class="info-card">
-        <h3><span class="card-icon">🌊</span> Muara Binuangeun</h3>
-        <p>Lokasi monitoring pertumbuhan mangrove hasil penanaman dengan tingkat keberhasilan tinggi.</p>
       </div>
     </div>
 
@@ -796,7 +791,7 @@
 
   <script>
     // Inisialisasi peta dengan view Indonesia
-    const map = L.map('map').setView([-6.12, 106.15], 10);
+    const map = L.map('map').setView([-2.5489, 118.0149], 10); 
 
     // Tambahkan layer OpenStreetMap
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
@@ -830,7 +825,7 @@
       },
       {
         nama: "Muara Binuangeun",
-        koordinat: [-6.93, 105.9],
+        koordinat: [-3.012014, 133.592037],
         nama_kelompok: "Kelompok Masyarakat Pesisir",
         tahun_tanam: "2022",
         luas: "8.0 Ha"
