--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
       background: var(--gradient-bg);
       background-attachment: fixed;
       color: var(--dark);
-      font-size: 18px;
-      line-height: 1.75;
+      font-size: 16px;
+      line-height: 1.6;
       overflow-x: hidden;
       position: relative;
     }
@@ -106,6 +106,55 @@
       border-image: var(--gradient-primary) 1;
     }
 
+    /* Burger Menu */
+    .burger-menu {
+      display: flex;
+      cursor: pointer;
+      background: none;
+      border: none;
+      padding: 8px;
+      position: relative;
+      z-index: 1001;
+      align-items: center;
+      justify-content: center;
+      width: 40px;
+      height: 40px;
+      border-radius: 8px;
+      transition: all 0.3s ease;
+    }
+
+    .burger-menu:hover {
+      background: rgba(22, 163, 74, 0.1);
+      transform: scale(1.05);
+    }
+
+    .burger-menu:active {
+      transform: scale(0.95);
+    }
+
+    .burger-menu img {
+      width: 24px;
+      height: 24px;
+      transition: opacity 0.3s ease;
+    }
+
+    .burger-menu img.menu-light {
+      display: block;
+    }
+
+    .burger-menu img.menu-dark {
+      display: none;
+    }
+
+    @media (prefers-color-scheme: dark) {
+      .burger-menu img.menu-light {
+        display: none;
+      }
+      .burger-menu img.menu-dark {
+        display: block;
+      }
+    }
+
     .brand {
       display: flex;
       align-items: center;
@@ -159,10 +208,71 @@
       letter-spacing: -0.02em;
     }
 
+    /* Burger Menu Styles */
+    .burger-menu {
+      display: flex;
+      cursor: pointer;
+      background: none;
+      border: none;
+      padding: 8px;
+      position: relative;
+      z-index: 1001;
+      align-items: center;
+      justify-content: center;
+      width: 40px;
+      height: 40px;
+      border-radius: 8px;
+      transition: background-color 0.3s ease;
+    }
+
+    .burger-menu:hover {
+      background: rgba(22, 163, 74, 0.1);
+    }
+
+    .burger-menu img {
+      width: 24px;
+      height: 24px;
+      transition: opacity 0.3s ease;
+    }
+
+    .burger-menu img.menu-light {
+      display: block;
+    }
+
+    .burger-menu img.menu-dark {
+      display: none;
+    }
+
+    @media (prefers-color-scheme: dark) {
+      .burger-menu img.menu-light {
+        display: none;
+      }
+      .burger-menu img.menu-dark {
+        display: block;
+      }
+    }
+
     .nav {
+      position: fixed;
+      top: 0;
+      right: -100%;
+      height: 100vh;
+      width: 80%;
+      max-width: 300px;
+      background: rgba(255, 255, 255, 0.95);
+      backdrop-filter: blur(10px);
+      flex-direction: column;
+      padding: 80px 24px 24px;
+      transition: right 0.3s ease;
+      box-shadow: var(--shadow);
+      z-index: 1000;
       display: flex;
       gap: 8px;
-      align-items: center;
+      align-items: flex-start;
+    }
+
+    .nav.active {
+      right: 0;
     }
 
     .nav a {
@@ -172,7 +282,7 @@
       padding: 12px 20px;
       border-radius: 25px;
       transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-      font-size: 0.95rem;
+      font-size: 0.85rem;
       position: relative;
       overflow: hidden;
     }
@@ -275,7 +385,7 @@
       height: 100%;
       object-fit: cover;
       display: block;
-      filter: blur(1px) brightness(1.1);
+      filter: blur(1px) brightness(1);
     }
 
     /* Enhanced Hero Content */
@@ -327,10 +437,10 @@
     }
 
     .hero h1 {
-      font-size: clamp(2.5rem, 5vw, 4rem);
+      font-size: clamp(2.4rem, 5vw, 3.2rem);
       font-weight: 800;
       line-height: 1.2;
-      margin-bottom: 1.5rem;
+      margin-bottom: 1.2rem;
       background: linear-gradient(135deg, var(--primary), var(--primary-light), var(--secondary));
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
@@ -348,8 +458,8 @@
       color: var(--dark);
       max-width: 800px;
       margin: 0 auto;
-      font-size: 1.2rem;
-      line-height: 1.8;
+      font-size: 1rem;
+      line-height: 1.6;
       font-weight: 500;
       text-shadow: 0 2px 4px rgba(255,255,255,0.8);
     }
@@ -495,8 +605,8 @@
 
     .card p {
       color: var(--muted);
-      line-height: 1.8;
-      font-size: 1.1rem;
+      line-height: 1.6;
+      font-size: 0.95rem;
       margin-bottom: 28px;
       text-shadow: 0 1px 2px rgba(0,0,0,0.05);
     }
@@ -583,14 +693,14 @@
     .feature-item .text {
       color: var(--dark);
       font-weight: none;
-      font-size: 1rem;
+      font-size: 0.95rem;
       text-align: left;
     }
 
     .feature-item .text strong {
       font-weight: 700;
       color: var(--accent-dark);
-      font-size: 1.1rem;
+      font-size: 1rem;
     }
 
     .feature-item .text p {
@@ -663,7 +773,7 @@
     }
 
     .cta-section h2 {
-      font-size: 3rem;
+      font-size: 2.4rem;
       font-weight: 800;
       color: white;
       margin-bottom: 24px;
@@ -672,10 +782,10 @@
     }
 
     .cta-section p {
-      font-size: 1.3rem;
+      font-size: 1.1rem;
       color: rgba(255,255,255,0.9);
       margin-bottom: 40px;
-      line-height: 1.7;
+      line-height: 1.6;
       text-shadow: 0 2px 10px rgba(0,0,0,0.1);
     }
 
@@ -690,7 +800,7 @@
       text-decoration: none;
       border-radius: 50px;
       font-weight: 700;
-      font-size: 1.1rem;
+      font-size: 1rem;
       transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
       border: 2px solid rgba(255,255,255,0.3);
       position: relative;
@@ -831,8 +941,6 @@
     @media (max-width: 768px) {
       .header {
         padding: 12px 16px;
-        flex-wrap: wrap;
-        gap: 12px;
       }
 
       .brand {
@@ -842,17 +950,7 @@
       .sitename {
         font-size: 1.4rem;
       }
-
-      .nav {
-        gap: 4px;
-        width: 100%;
-        justify-content: center;
-      }
-
-      .nav a {
-        padding: 8px 16px;
-        font-size: 0.9rem;
-      }
+    }
 
       .hero {
         min-height: 100vh;
@@ -921,7 +1019,6 @@
         padding: 16px 28px;
         font-size: 1rem;
       }
-    }
 
     @media (max-width: 520px) {
       .header {
@@ -1037,6 +1134,11 @@
       <div class="sitename">SIMANGRO</div>
     </div>
 
+    <button class="burger-menu" aria-label="Toggle menu" aria-expanded="false">
+      <img src="img/menu-light.png" alt="Menu" class="menu-light">
+      <img src="img/menu-dark.png" alt="Menu" class="menu-dark">
+    </button>
+
     <nav class="nav" aria-label="Menu utama">
       <a href="#about">Beranda</a>
       <a href="jenis/index.html">Jenis Mangrove</a>
@@ -1049,7 +1151,7 @@
   <section class="hero">
     <!-- Background Slideshow -->
       <div class="hero-slide active">
-        <img src="img/mangrove.jpg" alt="Ekosistem mangrove dengan akar prop yang khas" />
+        <img src="img/mangrove4.jpg" alt="Ekosistem mangrove dengan akar prop yang khas" />
         <div class="photo-credit">Sumber foto: Wetlands International (wetlands.org)</div>
       </div>
 
@@ -1144,7 +1246,6 @@
     <div class="copy">
       <div class="org">Kementerian Kelautan dan Perikanan</div>
       <div class="copyright">© Copyright 2025, Kementerian Kelautan dan Perikanan Republik Indonesia</div>
-      <div class=""
     </div>
   </footer>
 
@@ -1370,6 +1471,103 @@
       });
     })();
   </script>
+
+  <script>
+    // Burger Menu functionality
+    (function() {
+      const burgerMenu = document.querySelector('.burger-menu');
+      const nav = document.querySelector('.nav');
+      const navLinks = nav.querySelectorAll('a');
+      let isOpen = false;
+
+      // Set initial styles
+      nav.style.cssText = `
+        position: fixed;
+        top: 0;
+        right: -100%;
+        height: 100vh;
+        width: 80%;
+        max-width: 300px;
+        background: rgba(255, 255, 255, 0.95);
+        backdrop-filter: blur(10px);
+        display: flex;
+        flex-direction: column;
+        padding: 80px 24px 24px;
+        transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+        box-shadow: -10px 0 30px rgba(22, 163, 74, 0.1);
+        z-index: 1000;
+        gap: 8px;
+      `;
+
+      // Set styles for nav links
+      navLinks.forEach((link, index) => {
+        link.style.cssText = `
+          transform: translateX(50px);
+          opacity: 0;
+          transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+          transition-delay: ${index * 0.1}s;
+          width: 100%;
+          text-align: left;
+          padding: 12px 20px;
+          border-radius: 12px;
+        `;
+      });
+
+      function toggleMenu() {
+        isOpen = !isOpen;
+        nav.classList.toggle('active', isOpen);
+        burgerMenu.setAttribute('aria-expanded', isOpen.toString());
+        
+        if (isOpen) {
+          nav.style.right = '0';
+          navLinks.forEach(link => {
+            link.style.transform = 'translateX(0)';
+            link.style.opacity = '1';
+          });
+        } else {
+          nav.style.right = '-100%';
+          navLinks.forEach(link => {
+            link.style.transform = 'translateX(50px)';
+            link.style.opacity = '0';
+          });
+        }
+      }
+
+      // Toggle menu on burger click
+      burgerMenu.addEventListener('click', toggleMenu);
+
+      // Close menu when clicking outside
+      document.addEventListener('click', (e) => {
+        if (isOpen && !nav.contains(e.target) && !burgerMenu.contains(e.target)) {
+          toggleMenu();
+        }
+      });
+
+      // Close menu when pressing Escape
+      document.addEventListener('keydown', (e) => {
+        if (e.key === 'Escape' && isOpen) {
+          toggleMenu();
+        }
+      });
+
+      // Close menu when clicking a nav link
+      nav.querySelectorAll('a').forEach(link => {
+        link.addEventListener('click', () => {
+          if (isOpen) toggleMenu();
+        });
+      });
+
+      // Handle window resize
+      let resizeTimer;
+      window.addEventListener('resize', () => {
+        clearTimeout(resizeTimer);
+        resizeTimer = setTimeout(() => {
+          if (window.innerWidth > 768 && isOpen) {
+            toggleMenu();
+          }
+        }, 250);
+      });
+    })();
+  </script>
 </body>
 </html>
-
